--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <style>
 
         section {
@@ -83,9 +83,9 @@
         .social li img {
             width: 150px;
         }
-        .social li:first-child img {
-            margin-top:4px;
-            margin-right: 150px;
+        .social li img {
+            margin:4px 70px 0 70px;
+            maargin-right: 150px;
         }
 
         .archive-link {
@@ -105,6 +105,27 @@
             display: none;
         }
 
+        @media (max-width: 600px) {
+            section {
+                top: 10%;
+            }
+            .logo {
+                width: 70%;
+            }
+            .social {
+                margin-bottom: 0;
+            }
+            .social li img {
+
+                width: 40%;
+                margin-bottom: 6%;
+            }
+            form {
+                width: 80%;
+            }
+
+            }
+
     </style>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -115,7 +136,7 @@
     <form>
         <h1>Get in touch?</h1>
         <p>Choose your means of communication</p>
-        <a href="" class="email">E-mail</a><a class="phone" href="">Phone</a>
+        <a href="mailto:hl@betterday.dk" class="email">E-mail</a><a class="phone" href="tel:40982999">Phone</a>
         <input type="email" placeholder="Please enter your email and we will get back to you.">
         <input type="tel" placeholder="Please enter your phonenumber and we will get back to you.">
         <input type="submit" value="Send">
